# rpg-classic

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/api/: character.rs
src/domain/: character.rs
src/middleware/: logging.rs
src/router/: app.rs  character.rs  health.rs  mod.rs
src/state/: app_state.rs
