[package]
name = "rpg_classic"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros","uuid", "chrono"] } 
axum = "0.8.8"
tower = "0.5.2"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = {version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4","serde"]}